Need to create pokemon weakness now

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
           <option value="flying">Flying</option>
           <option value="dragon">Dragon</option>
         </select>
+
+        <label for="input-pokemon-type">Pokemon Weakness</label><br>
+        <select id="input-pokemon-type" name="input-pokemon-type" class="input-pokemon-type">
+          <option value="all">All</option> 
+          <option value="electric">Electric</option>
+          <option value="fire">Fire</option>
+          <option value="water">Water</option>
+          <option value="ground">Ground</option>
+          <option value="normal">Normal</option>
+          <option value="poison">Poison</option>
+          <option value="psychic">Psychic</option>
+          <option value="fairy">Fairy</option>
+          <option value="flying">Flying</option>
+          <option value="dragon">Dragon</option>
+        </select>
       </div>
       </div>
       </div>
