--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
           <option value="electric">Electric</option>
           <option value="fire">Fire</option>
           <option value="water">Water</option>
-          <option value="ground">Ground</option>
           <option value="normal">Normal</option>
           <option value="poison">Poison</option>
           <option value="psychic">Psychic</option>
@@ -56,9 +55,9 @@
           <option value="dragon">Dragon</option>
         </select>
 
-        <label for="input-pokemon-type">Pokemon Weakness</label><br>
-        <select id="input-pokemon-type" name="input-pokemon-type" class="input-pokemon-type">
-          <option value="all">All</option> 
+        <label for="input-weakness-type">Pokemon Weakness</label><br>
+        <select id="input-weakness-type" name="input-weakness-type" class="input-weakness-type">
+          <option value="default">Default</option> 
           <option value="electric">Electric</option>
           <option value="fire">Fire</option>
           <option value="water">Water</option>
@@ -105,7 +104,7 @@
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item {{class}}-bg">Type: {{type}} {{{emojiType}}}</li>
-            <li class="list-group-item">Weakness: {{weakness}} {{{emojiWeakness}}}</li>
+            <li class="list-group-item weakness">Weakness: {{weakness}} {{{emojiWeakness}}}</li>
             {{#if flying}}
             <li class="list-group-item">Flies: {{{flying}}}</li>
             {{/if}}
