--- a/index.html
+++ b/index.html
@@ -82,49 +82,7 @@
 <!-- Button trigger modal -->
 
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-nr="">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title name" id="exampleModalLabel">Name</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
-        <img class="mb-4" src="" id="img-modal" alt="Img Modal">
-        <div class="badge-type-div">
-          <p>Type:</p>
-        </div>
-        <p id="description" class="mt-4"></p>
-        <div class="badge-div">
-          <p>Weaknesses:</p>
-        </div>
-        <div class="evolution-div mt-4">
-          <div class="row">
-          <div class="evolvesFrom col-6">
-            Evolves from:<br>
-            <img class="evolves-from-img" src="#">
-          </div>
-          <div class="evolvesTo col-6">
-            Evolves to:<br>
-            <img class="evolves-to-img" src="#">
-          </div>
 
-          <div class="pokemon-card-div col-6">
-              Cards:<br>
-              <img class="pokemon-card-img" src="#">
-            </div>
-        </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
@@ -146,6 +104,54 @@
   <script src="js/main.js"></script>
 
   <script id="summative-template" type="text/x-handlebars-template">
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+      data-nr="">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title name" id="exampleModalLabel">Name</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body text-center">
+            <img class="mb-4" src="" id="img-modal" alt="Img Modal">
+            <div class="badge-type-div">
+              <p>Type:</p>
+            </div>
+            <p id="description" class="mt-4 {{name}}"></p>
+            <div class="badge-div">
+              <p>Weaknesses:</p>
+            </div>
+            <div class="evolution-div mt-4">
+              <div class="row">
+                <div class="evolvesFrom col-6">
+                  Evolves from:<br>
+                  <img class="evolves-from-img" src="#">
+                </div>
+                <div class="evolvesTo col-6">
+                  Evolves to:<br>
+                  <img class="evolves-to-img" src="#">
+                </div>
+    
+                <div class="pokemon-card-div col-6">
+                  Card:<br>
+                  <img class="pokemon-card-img" src="#">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- //Input to add like grid style -->
+
+
     <div class="container">  
     </div>
     {{#each names}}
@@ -183,54 +189,6 @@
     var dataTemplate = template(pokemons);
     var templateWrite = document.getElementById('target').innerHTML += dataTemplate;
 
-
-$(".card").on('click', function() {
-    $(".badge").hide();
-    $(".evolvesFrom").show();
-    $(".evolvesTo").show();
-    var dataNr = $(this).closest('.card-hide').attr('data-nr');
-    $("#exampleModal").attr('data-nr', dataNr);
-    var src = $(this).find('.card-img-top').attr('src');
-    for (var i = 0; i < pokemons.names.length; i++) {
-          pokemons.names[i].image == src;
-        if ('img/' + pokemons.names[i].image == src)
-          var name = pokemons.names[i].name;
-        $(".modal-title").text(name);
-        $("#img-modal").attr('src', src);
-        $("#description").text(pokemons.names[i].description);
-      }
-        var weakness = $(this).find('.weakness').text()
-        $("#weaknesses").text(weakness);
-        var weaknessNames = weakness.slice(10);
-        weaknessNames = weaknessNames.split(', ');
-        for (var i = 0; i < weaknessNames.length; i++) {
-           $(".badge-div").append('<span class="badge badge-pill mr-1 ml-1 badge-' + weaknessNames[i] + '">' + weaknessNames[i] + '</span>');
-        }
-
-        var typeNames = $(this).find('.type').text()
-        var typeNames = typeNames.slice(6);
-        typeNames = typeNames.split(', ');
-        for (var i = 0; i < typeNames.length; i++) {
-           $(".badge-type-div").append('<span class="badge badge-pill mr-1 ml-1 badge-' + typeNames[i] + '">' + typeNames[i] + '</span>');
-        }
-
-        var evolutionFrom = $(this).find('.evolves-from').text()
-        var evolutionFrom = evolutionFrom.slice(14).toLowerCase();
-        console.log(evolutionFrom);
-        $(".evolves-from-img").attr('src',  'img/' + evolutionFrom + '.png');
-        
-        var evolutionTo = $(this).find('.evolves-to').text()
-        var evolutionTo = evolutionTo.slice(12).toLowerCase();
-        $(".evolves-to-img").attr('src',  'img/' + evolutionTo + '.png');
-
-
-        if ($(".evolves-to-img").attr('src') == "img/.png") {
-          $(".evolvesTo").hide();
-        }
-        if ($(".evolves-from-img").attr('src') == "img/.png") {
-          $(".evolvesFrom").hide();
-        }
-});
 
 
   </script>
