--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
 
 
 <body>
-<!-- <div class="horizontal">
-<img src="img/pokemon-logo.png" class="fa-spin" id="logoImg">
+
+
+
+<div class="horizontal">
+<img src="img/logoPoke.png" class="fa-spin" id="logoImg">
 </div>
-   -->
+  
   <!-- <ul class="nav">
     <img id="logo" src="img/logo.png">
   </ul> -->
-  <div class="container-fluid" > <!--style="display:none"-->
+
+  <div class="container-fluid" style="display:none" > 
     
     <div class="row">
       <div class="col-lg-12 top-nav">
@@ -192,6 +196,33 @@
                   </div>
                   
               </div>
+
+              <div id="carouselExampleIndicators" class="carousel slide mt-5" data-ride="carousel">
+
+                <div class="carousel-inner mt-4">
+                  <div class="carousel-item active">
+                    <img class="d-block w-45 carousel-image-pokemon_0 mx-auto" src="" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-45 carousel-image-pokemon_1 mx-auto" src="" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-45 carousel-image-pokemon_2 mx-auto" src="" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" style="filter:invert(1)" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" style="filter:invert(1)" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+
+
+
             </div>
           </div>
           <div class="modal-footer">
