--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
 
 
-
+  
 <div class="horizontal">
-<img src="img/logoPoke.png" class="fa-spin" id="logoImg">
+<img src="img/pokemon-logo.png" class="fa-spin" id="logoImg">
 </div>
   
   <!-- <ul class="nav">
