--- a/index.html
+++ b/index.html
@@ -88,19 +88,38 @@
           <option value="dragon">Dragon</option>
         </select>
 
-        <label for="input-fly-type">Flies</label><br>
+        <label for="input-fly-type">Flying</label><br>
         <select id="input-fly-type" name="input-fly-type" value="default" class="input-fly-type">
-            <option value="default">Default</option>
+            <option value="default">All</option>
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
+
+        <button type="button" id="btn-luck" class="btn btn-block mt-4 btn-luck">Which Pokemon are you?</button>
       </div>
       </div>
       </div>
 <!-- Button trigger modal -->
 
-
-
+<!-- Modal -->
+<div class="modal fade" id="modalLuck" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body text-center">
+       <h4 class="mt-4">You are..</h4>
+       <img id="pokemon-lucky-image" class="mt-4" style="width:50%" src="">
+       <h3 class="mt-4" id="pokemon-lucky-name"></h3>
+       <p class="mt-4" id="pokemon-description"></p>
+       <div class="mt-5" id="your-strengths">
+        <p>Your Strengths:</p>
+      </div>
+       <div class="mt-5 mb-5" id="your-weakness">
+         <p>Your Weaknesses:</p>
+       </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -146,7 +165,7 @@
 
             </div>
             <div class="evolution-div mt-4">
-              <div class="row">
+              <div class="row evolves-parent-div">
                 <div class="evolvesFrom col-6 pulse animated mb-2">
                   Evolves from:<br>
                   <img class="evolves-from-img mt-2" src="#">
