--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <option value="no">No</option>
         </select>
 
-        <button type="button" id="btn-luck" class="btn btn-block mt-4 btn-luck">Which Pokemon are you?</button>
+        <button type="button" id="btn-luck" class="btn btn-block mt-4 btn-luck">?</button>
       </div>
       </div>
       </div>
