--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
   </ul> -->
 
   <div class="container-fluid" style="display:none" > 
-    
-    <div class="row">
+    <div class="sidebar-overlay">
+    <div class="row discount">
       <div class="col-lg-12 top-nav">
         <ul class="top-nav ul-flex">
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>About</li></a>
+          <a href="#"><li>Contact</li></a>
         </ul>
-      </div>
+      </div>     
+    </div>
     </div>
 
     <div class="row">
