--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
-
-        <button type="button" id="btn-luck" class="btn btn-block mt-4 btn-luck">?</button>
+        <div class="lucky-box-div">
+            <img src="img/lucky_block.png" id="btn-luck" alt="Lucky Block">
+            <p class="text-white">Which Pokemon are you?</p>
+        </div>
       </div>
       </div>
       </div>
@@ -136,13 +138,7 @@
   </div>
 
 
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
+
 
   <script id="summative-template" type="text/x-handlebars-template">
 
@@ -219,7 +215,7 @@
                   
               </div>
 
-              <div id="carouselExampleIndicators" class="carousel slide mt-5" data-ride="carousel">
+              <div id="carouselExampleIndicators" class="carousel slide mt-5 mb-5" data-ride="carousel">
 
                 <div class="carousel-inner mt-4">
                   <div class="carousel-item active">
@@ -246,9 +242,6 @@
 
 
             </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -288,20 +281,25 @@
     {{/each}}
   </script>
 
-  <script type="text/javascript">
-
-    var info = document.getElementById('summative-template').innerHTML;
-
-    var template = Handlebars.compile(info);
-
-    var dataTemplate = template(pokemons);
-    var templateWrite = document.getElementById('target').innerHTML += dataTemplate;
-
+<script src="js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+<script src="js/plugins.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/data.js"></script>
+<script src="js/main.js"></script>
 
 
-  </script>
+<script type="text/javascript">
+  var info = document.getElementById('summative-template').innerHTML;
 
-  
+  var template = Handlebars.compile(info);
+
+  var dataTemplate = template(pokemons);
+  var templateWrite = document.getElementById('target').innerHTML += dataTemplate;
+
+</script>
+
 
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
